--- a/src/app/components/admin/admin/admin.html
+++ b/src/app/components/admin/admin/admin.html
@@ -222,7 +222,7 @@
         <!-- Message d'information -->
         <div class="mt-4 p-3 bg-indigo-500/10 border border-indigo-500/20 rounded-lg">
           <p class="text-xs text-indigo-400">
-            <span class="font-semibold">Note :</span> Le mot de passe par défaut sera les 4 derniers chiffres du téléphone.
+            <span class="font-semibold">Note :</span> Le mot de passe par défaut sera les 4 derniers chiffres du téléphone que vous devrez impérativement modifié une fois sur votre interface.
           </p>
         </div>
 
